# ilqr

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
examples/: CMakeLists.txt
examples/pendulum_on_cart/: CMakeLists.txt
examples/pendulum_on_cart/include/: pendulum_on_cart.hpp
examples/pendulum_on_cart/scripts/: animate.py  requirements.txt  visualize.py
examples/pendulum_on_cart/src/: main.cpp
ilqr/constraints/: control_bound.hpp  inequality_constraint.hpp  state_bound.hpp
ilqr/controller/: ilqr.hpp
ilqr/cost_functions/: cost_function.hpp  cost_function_with_constraints.hpp  cost_function_with_finite_diff.hpp  quadratic_cost_function.hpp
ilqr/integration/iterator/: constant_integration_iterator.hpp  integration_iterator.hpp
ilqr/integration/stepper/: euler_integration_stepper.hpp  integration_stepper.hpp  rk2_integration_stepper.hpp  rk3_integration_stepper.hpp  rk4_integration_stepper.hpp
ilqr/systems/continuous_time/: continuous_system.hpp  continuous_system_with_finite_diff.hpp
ilqr/systems/discrete_time/: discrete_system.hpp  discrete_system_with_finite_diff.hpp  discretizer.hpp
tests/: CMakeLists.txt
tests/ilqr/cost_function/: test_cost_function_with_finite_diff.cc
tests/ilqr/system/: test_discrete_system_with_finite_diff.cc
